Fix margin and overflow on filter category rows

--- a/common/static/css/_filters.sass
+++ b/common/static/css/_filters.sass
@@ -42,14 +42,14 @@ $padding-y: 1em
 
 .filters__category
 	+link-transition
-	flex-basis: 25%
 	display: flex
 	align-items: center
 	justify-content: center
 	border: 0
 	border-radius: 0.5em
-	padding: ($padding-y * 1.5) $padding-x
+	width: calc(25% - #{$padding-x})
 	margin: ($padding-y / 2) ($padding-x / 2)
+	padding: ($padding-y * 1.5) $padding-x
 
 	background-color: $filters-bg-light
 	color: $filters-fg-dim
